[openuv] time channels not filled
Signed-off-by: clinique <gael@lhopital.org>